History file for ack.  https://beyondgrep.com/


2.999_01
====================================
[ENHANCEMENTS]
Added --pod as a filetype.

ack 3's new features are listed in RELEASE-NOTES.md.