@@ -311,10 +311,16 @@ sub _options_block {
 --type-add=lua:ext:lua
 --type-add=lua:firstlinematch:/^#!.*\blua(jit)?/
 
+# Markdown
+# https://en.wikipedia.org/wiki/Markdown
+--type-add=markdown:ext:md,markdown
+# We understand that there are many ad hoc extensions for markdown
+# that people use.  .md and .markdown are the two that ack recognizes.
+# You are free to add your own in your ackrc file.
+
 # Matlab
 # http://en.wikipedia.org/wiki/MATLAB
 --type-add=matlab:ext:m
-
 
 # Objective-C
 --type-add=objc:ext:m,h
