@@ -15,6 +15,8 @@ word matching.
 
 * `--proximate=N` option
 
+* Added `--pod` and `--markdown`.
+
 
 # Incompatibilities with ack 2
 
